--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "jsdom": "^24.1.1",
-    "mongoose": "^8.4.3"
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.12.2"
   }
 }
